Fix truncated dropdowns for add/edit schedule.

--- a/app/assets/stylesheets/app/components/_app-loading.scss
+++ b/app/assets/stylesheets/app/components/_app-loading.scss
@@ -10,7 +10,7 @@
   .logo {
     display: block;
     margin: 25vh auto auto;
-    width: 20%;
+    width: 5.625rem;
   }
 
   .spinner {
